<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eureka_odometry</name>
  <version>1.0.0</version>
  <description>Collect joint states and publish odometry</description>
  <license>Apache License 2.0</license>
  <maintainer email="sewa.egorov@yandex.ru">Vsevolod Egorov</maintainer>

  <author email="sewa.egorov@yandex.ru">Vsevolod Egorov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
